test/scc_test/exp/semantic-errors/040.t
void test()
{
    void* a;
    1 / a;
}